--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,22 @@
     <modules>
         <module>divide-and-conquer</module>
         <module>scalability-and-thread-safety</module>
+        <module>shared-mutability</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
