--- a/scalability-and-thread-safety/pom.xml
+++ b/scalability-and-thread-safety/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>parent-prg-conc-on-the-jvm</artifactId>
         <groupId>com.agiledeveloper.pcj</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
