--- a/shared-mutability/pom.xml
+++ b/shared-mutability/pom.xml
@@ -7,10 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>divide-and-conquer</artifactId>
+    <artifactId>shared-mutability</artifactId>
     <packaging>jar</packaging>
 
-    <name>divide-and-conquer</name>
+    <name>shared-mutability</name>
     <url>http://maven.apache.org</url>
 
     <properties>
