--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>divide-and-conquer</module>
         <module>scalability-and-thread-safety</module>
         <module>shared-mutability</module>
+        <module>using-transactional-memory</module>
     </modules>
 
     <build>
